# standx-dual-maker-bot

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  standx_bot.py
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md
docs/superpowers/plans/: 2026-03-31-codex-profile-switch.md
scripts/: install.sh  run.sh  setup.sh
tests/: test_standx_runtime_guards.py
